# ros-repo-5

./: Admin_manager.py  MUSEUM.pgm  MUSEUM.yaml  README.md  Robot_Driving.py  Robot_Driving_description.py  map.yaml  nav2_params.yaml  package.xml  routes.py  setup.py  yolo_test_node.py
Arts/: Arts.yaml
Arts/labels/: train.cache  val.cache
PAM_Admin/admin_package/: setup.py
PAM_User/user_package/: setup.py
admin_package/: package.xml  setup.cfg  setup.py
admin_package/admin_package/: Admin_Manager.py  Admin_manager.py  db_create.py  gui.py  msg.ui
admin_package/resource/: gui.ui
camera_pkg/: setup.py
camera_pkg/launch/: camera.launch.py
drive_pkg/: package.xml  setup.py
drive_pkg/drive_pkg/: SecurityPatrol.py  navigation_to_goal.py
flask/: server.py  upload.py
flask_rasp/: server.py  upload.py
flask_rasp/templates/: files.html
map/: map.pgm  map.yaml
mic_client/: package.xml  setup.cfg  setup.py
mic_client/mic_client/: service_client.py  service_server.py  test.py
mic_msgs/: CMakeLists.txt  package.xml
mic_server/: package.xml  setup.cfg  setup.py
mic_server/mic_server/: service_client.py  service_server.py
msg_pkg/: package.xml
pam_admin_ws/camera_pkg/: setup.py
pam_admin_ws/connection/: package.xml
pam_admin_ws/user_package/: package.xml
pam_robot_ws/: map.pgm  map.yaml
pam_robot_ws/drive_pkg/: setup.py
pam_robot_ws/src/ros_package/: package.xml
pam_robot_ws/src/ros_package/ros_package/: Robot_Driving.py  Robot_Service.py  Robot_Topic.py  camera.py  test.py  voice_recognize.py
pam_robot_ws/src/ros_package/ros_package/mic_src/: sp_recog.py
ros_package/: setup.py
ros_package/launch/: PAM_Robot.launch.py
ros_package/ros_package/: Robot_Driving.py  Robot_Driving_1.py  Robot_Service.py  Robot_Topic.py  camera.py  routes.py  (+4 more)
ros_package_msgs/: CMakeLists.txt  package.xml
user_package/: setup.py
(+78 files in other folders)
