<package format="3">
  <name>mic_client</name>
  <version>0.0.1</version>
  <description>Example package with simple service client and server</description>
  <maintainer email="ito@example.com">ito</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>mic_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>